# smallcheck-regex

./: README.md  smallcheck-regex.cabal
src/Test/SmallCheck/: Regex.hs
